might have fixed ios overflow problem

--- a/scss/layout/aside.scss
+++ b/scss/layout/aside.scss
@@ -4,6 +4,7 @@ aside {
     position: fixed;
     z-index: $aside-z-index;
     top: -$extra-spacing;
+    bottom:- $extra-spacing;
     padding-top: $extra-spacing;
     padding-bottom: $extra-spacing;
     width: 100%;
